initial template setup for 3yp

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,17 @@
-\lipsum[1-6]
+% TODO: Write a concise abstract summarizing your project (typically 200-300 words)
+%
+% Your abstract should include:
+% - Brief background on mTBI and the need for objective assessment tools
+% - The objective of this project
+% - A brief description of your approach (smartphone-based pupillometry device)
+% - Key biomarkers measured (PLR, convergence, smooth pursuit, microsaccades)
+% - Main results and findings
+% - Conclusions and significance
+%
+% Example structure:
+%
+% Mild traumatic brain injury (mTBI), commonly known as concussion, is a significant
+% public health concern requiring rapid and objective assessment methods. Current
+% diagnostic approaches rely heavily on subjective symptom evaluation. This project
+% presents the design and development of a smartphone-based mTBI screening tool
+% using pupillometry...
