--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,4 +1,22 @@
-\lipsum[1-10]
+% TODO: Write acknowledgements
+%
+% Thank people who helped with the project:
+% - Your supervisor
+% - Technical staff who assisted with fabrication/testing
+% - Lab members or peers who provided feedback
+% - Any funding sources
+% - Family/friends for support
+%
+% Example:
+%
+% We would like to express our sincere gratitude to our supervisor,
+% Mauricio Villarroel, for his guidance and support throughout this project.
+%
+% We thank the Department of Engineering Science for providing the facilities
+% and resources necessary to complete this work.
+%
+% We also acknowledge [any specific people who helped with technical aspects,
+% testing, etc.].
 
 \null\vfill
 \noindent This document was created using the \latex typesetting system.
