--- a/appendix_2.tex
+++ b/appendix_2.tex
@@ -1,5 +1,61 @@
-\chapter{Optical flow estimation}
-\label{appendix:appendix_2} 
+\chapter{Software Documentation}
+\label{appendix:software}
 
 
-\lipsum[2-9]
+% TODO: Include software documentation and code samples
+
+
+\section{Software Architecture}
+
+% TODO: Detailed software architecture documentation
+% - System architecture diagrams
+% - Class diagrams
+% - Data flow diagrams
+
+
+\section{API Documentation}
+
+% TODO: Document key APIs and interfaces
+% - Phone-to-electronics communication protocol
+% - Data structures
+% - Function signatures
+
+
+\section{Key Code Snippets}
+
+% TODO: Include important code implementations
+% Use the listings package for code formatting
+
+
+% Example code listing:
+% \begin{lstlisting}[style=cstyle, caption={Pupil detection function}, label={lst:pupil_detection}]
+% // Pseudo-code for pupil detection
+% function detectPupil(image) {
+%     // Preprocess image
+%     grayImage = convertToGrayscale(image);
+%     blurred = applyGaussianBlur(grayImage);
+%
+%     // Detect pupil using contour detection
+%     contours = findContours(blurred);
+%     pupilContour = selectCircularContour(contours);
+%
+%     return pupilContour;
+% }
+% \end{lstlisting}
+
+
+\section{User Manual}
+
+% TODO: Brief user guide
+% - How to set up the device
+% - How to run a test
+% - Interpreting results
+% - Troubleshooting
+
+
+\section{Testing Data}
+
+% TODO: Include sample test data or results
+% - Raw data samples
+% - Processed outputs
+% - Performance metrics
