--- a/glossary.tex
+++ b/glossary.tex
@@ -1,5 +1,55 @@
-\newabbreviation[description={Blood pressure}]{bp}{BP}{blood pressure}
-\newabbreviation[longplural={heart rates},description={Heart rate}]{hr}{HR}{heart rate}
-\newabbreviation[description={Respiratory rate}]{rr}{RR}{respiratory rate}
-\newabbreviation[sort=SaO2,description={Arterial oxygen saturation}]{sao2}{\ensuremath{SaO_2}}{arterial oxygen saturation}
-\newabbreviation[sort=SpO2, description={Peripheral oxygen saturation, as measured by a pulse oximeter}]{spo2}{\ensuremath{SpO_2}}{peripheral oxygen saturation}
+%
+% Glossary and abbreviations
+%
+% This file defines all acronyms and abbreviations used in the report.
+% Use \ab{label} in the text to reference them.
+% On first use, the full form will be shown; subsequent uses show the abbreviation only.
+%
+
+
+% Medical and Clinical Terms
+
+\newabbreviation[description={Mild Traumatic Brain Injury, the medical term for concussion}]{mtbi}{mTBI}{mild traumatic brain injury}
+
+\newabbreviation[description={Traumatic Brain Injury}]{tbi}{TBI}{traumatic brain injury}
+
+\newabbreviation[description={Sport Concussion Assessment Tool - 5th Edition, a standardized concussion evaluation tool}]{scat5}{SCAT5}{Sport Concussion Assessment Tool - 5th Edition}
+
+\newabbreviation[description={Glasgow Coma Scale, a clinical scale to measure consciousness}]{gcs}{GCS}{Glasgow Coma Scale}
+
+
+% Pupillometry and Oculomotor Terms
+
+\newabbreviation[description={Pupillary Light Reflex, the pupil's response to changes in light intensity}]{plr}{PLR}{pupillary light reflex}
+
+\newabbreviation[description={The measurement and analysis of pupil size and responses}]{pupillometry}{pupillometry}{pupillometry}
+
+\newabbreviation[description={Eye movements towards each other when focusing on a near object}]{convergence}{convergence}{convergence}
+
+\newabbreviation[description={Smooth eye movements used to track moving objects}]{smoothpursuit}{smooth pursuit}{smooth pursuit}
+
+\newabbreviation[description={Small, rapid, involuntary eye movements}]{microsaccades}{microsaccades}{microsaccades}
+
+\newabbreviation[description={Vestibulo-Ocular Reflex, eye movements that stabilize images during head movement}]{vor}{VOR}{vestibulo-ocular reflex}
+
+
+% Technology and Engineering Terms
+
+\newabbreviation[description={Printed Circuit Board}]{pcb}{PCB}{printed circuit board}
+
+\newabbreviation[description={Light Emitting Diode}]{led}{LED}{light emitting diode}
+
+\newabbreviation[description={Application Programming Interface}]{api}{API}{application programming interface}
+
+\newabbreviation[description={Universal Serial Bus}]{usb}{USB}{Universal Serial Bus}
+
+\newabbreviation[description={Bluetooth Low Energy, a wireless communication protocol}]{ble}{BLE}{Bluetooth Low Energy}
+
+\newabbreviation[description={Frames Per Second, measure of video frame rate}]{fps}{FPS}{frames per second}
+
+\newabbreviation[description={Computer-Aided Design}]{cad}{CAD}{computer-aided design}
+
+
+% Add more project-specific abbreviations as needed
+% Example template:
+% \newabbreviation[description={Full description of term}]{label}{ABBREV}{full form}
