--- a/sample_dphil_thesis.tex
+++ b/sample_dphil_thesis.tex
@@ -1,22 +1,17 @@
 %
 % File    : sample_dphil_thesis.tex
-% Author  : Mauricio Villarroel
-% Created : Sept 6, 2013
-% ____________________________________________________________________________
-%
-% Copyright (C) 2013-2022 Mauricio Villarroel. All rights reserved.
-%
-% SPDX-License-Identifer:  GPL-2.0-only
+% Author  : Suleiman Mahmood, Victor Moreno, Eesh Mishra, Rahul Marchand
+% Created : 2025
 % ____________________________________________________________________________
 %
 % DESCRIPTION :
 %
-% Sample DPhil thesis of the Engineering department of 
-% the University of Oxford
+% Third-year Engineering Group Project Report
+% Smartphone-Based mTBI Screening Tool Using Pupillometry
 % ____________________________________________________________________________
 
 
-\documentclass{oxengthesis}
+\documentclass[report]{oxengthesis}
 
 
 %
@@ -24,11 +19,11 @@
 %
 
 
-\title       {The long-term effects of climate change on farming in Middle Earth}
-\author      {Samwise Gamgee}
-\college     {Jesus College}
-\supervisor  {Professor J.R.R. Tolkien}
-\date        {Hilary Term, 2048}
+\title       {Smartphone-Based mTBI Screening Tool Using Pupillometry}
+\author      {Suleiman Mahmood, Victor Moreno, Eesh Mishra, Rahul Marchand \\ \textit{(Equal contribution)}}
+\degree      {{\huge Third-Year Group Project Report}}
+\supervisor  {Mauricio Villarroel}
+\date        {Trinity Term, 2026}
 
 
 
@@ -47,17 +42,11 @@
 \mainmatter
 
 
-% Remove the following line when you are creating your document.
-% It only contains the documentation of the OxEngThesis class
-\include{oxengthesis_class_documentation}
-
-
-
 \include{chap_introduction}
-\include{chap_literature_review}
-\include{chap_dataset}
-\include{chap_method_1}
-\include{chap_method_2}
+\include{chap_background}
+\include{chap_design}
+\include{chap_implementation}
+\include{chap_testing}
 \include{chap_conclusion}
 
 \appendix
