--- a/references.bib
+++ b/references.bib
@@ -1,455 +1,91 @@
 %
 % Bibliography
 %
-
-@article{adams2007bayesian,
-  title         = {Bayesian online changepoint detection},
-  author        = {Adams, Ryan Prescott and MacKay, David JC},
-  journal       = {arXiv Cornell University Library},
-  year          = {2007}
-}
-
-@book{stroetmann2010can,
-  title         = {How can telehealth help in the provision of integrated care?},
-  author        = {Stroetmann, Karl A and Kubitschke, Lutz and Robinson, Simon and Stroetmann, Veil and Cullen, Kevin and McDaid, David and World Health Organization and others},
-  year          = {2010},
-  publisher     = {World Health Organization. Regional Office for Europe}
-}
+% Add your references here in BibTeX format.
+% You can export BibTeX entries from Google Scholar, PubMed, IEEE Xplore, etc.
+%
 
 
-@book{prior1977physical,
-  title         = {Physical diagnosis: the history and examination of the patient},
-  author        = {Prior, John A and Silberstein, Jack S},
-  year          = {1977},
-  publisher     = {CV Mosby}
-}
-
-@misc{goldberg2005practical,
-  title         = {A practical guide to clinical medicine},
-  author        = {Goldberg, Charlie and Thompson, Jan},
-  publisher     = {University of California San Diego},
-  year          = {2005},
-  url           = {https://meded.ucsd.edu/clinicalmed/vital.htm},
-  note          = {[Online; accessed 14-May-2017]}
-}
-
-@Book{Ruanaidh1996,
-  title         = {Numerical Bayesian Methods Applied to Signal Processing (Statistics and Computing)},
-  author        = {Ruanaidh, Joseph and Fitzgerald, William},
-  year          = {1996},
-  publisher     = {Springer}
-}
+% Example references for mTBI and pupillometry
+% Replace these with your actual references
 
 
-@article{brooks1984infrared,
-  title         = {Infrared heat lamps interfere with pulse oximeters},
-  author        = {Brooks, Timothy D and Paulus, David A and Winkle, William E},
-  journal       = {The Journal of the American Society of Anesthesiologists},
-  volume        = {61},
-  number        = {5},
-  pages         = {630--630},
-  year          = {1984},
-  publisher     = {The American Society of Anesthesiologists}
-}
-
-@article{barker2002motion,
-  title         = {``Motion-resistant'' pulse oximetry: a comparison of new and old models},
-  author        = {Barker, Steven J},
-  journal       = {Anesthesia \& Analgesia},
-  volume        = {95},
-  number        = {4},
-  pages         = {967--972},
-  year          = {2002},
-  publisher     = {International Anesthesia Research Society}
-}
-
-@article{barker1987effect,
-  title         = {The effect of carbon monoxide inhalation on pulse oximetry and transcutaneous {PO2}},
-  author        = {Barker, Steven J and Tremper, Kevin K},
-  journal       = {Anesthesiology},
-  volume        = {66},
-  number        = {5},
-  pages         = {677--679},
-  year          = {1987}
-}
-
-@article{barker1987pulse,
-  title         = {Pulse oximetry: applications and limitations.},
-  author        = {Barker, Steven J and Tremper, Kevin K},
-  journal       = {International anesthesiology clinics},
-  volume        = {25},
-  number        = {3},
-  pages         = {155--175},
-  year          = {1987},
-  publisher     = {LWW}
-}
-
-@article{peacock1998oxygen,
-  title         = {Oxygen at high altitude},
-  author        = {Peacock, Andrew J},
-  journal       = {British Medical Journal},
-  volume        = {317},
-  number        = {7165},
-  pages         = {1063},
-  year          = {1998},
-  publisher     = {BMJ Publishing Group}
-}
-
-@article{moller1993randomized,
-  title         = {Randomized Evaluation of Pulse Oximetry in 20,802 Patients; I},
-  author        = {Moller, Jakob T and Pedersen, Tom and Rasmussen, Lars S and Jensen, Per F and Pedersen, Bente D and Ravlo, Odd and Rasmussen, Niels H and Espersen, Kurt and Johannessen, Nils W and Cooper, Jeffrey B and others},
-  journal       = {Anesthesiology},
-  volume        = {78},
-  number        = {3},
-  pages         = {436--444},
-  year          = {1993}
-}
-
-@ARTICLE{priya2012transition,
-  title         = {Transition Detection Using {Hilbert Transform} and Texture Features},
-  author        = {Priya, G and Domnic, S},
-  journal       = {American Journal of Signal Processing},
-  year          = {2012},
-  volume        = {2},
-  pages         = {35-40}
-}
-
-@ARTICLE{haralick1973textural,
-  title         = {Textural features for image classification},
-  author        = {Haralick, Robert M.  and Shanmugam, K.  and Dinstein, Its'Hak},
-  journal       = {IEEE Transactions on systems, man, and cybernetics},
-  year          = {1973},
-  pages         = {610--621},
-  number        = {6},
-  volume        = {SMC-3},
-}
-
-@misc{Grass2012Online,
-  title         = {{Grasshopper2 camera}},
-  author        = {{Point Grey Research}},
-  url           = {http://ptgrey.com/grasshopper2-gige-cameras},
-  year          = {2017},
-  note          = {[Online; accessed 14-May-2017]}
-}
-
-@misc{NoninPulseOxOnline,
-  title         = {{Pulse Oximetry}},
-  author        = {{Nonin Medical}},
-  url           = {http://www.nonin.com/PulseOximetry},
-  year          = {2017},
-  note          = {[Online; accessed 14-May-2017]}
-}
-
-@misc{HidalgoEquivitalEQ02Online,
-  title         = {{Equivital EQ02 LifeMonitor}},
-  author        = {Hidalgo},
-  url           = {http://www.equivital.co.uk/products/tnr/sense-and-transmit},
-  year          = {2017},
-  note          = {[Online; accessed 14-May-2017]}
-}
-
-@ARTICLE{poh2011advancements,
-  title         = {Advancements in noncontact, multiparameter physiological measurements using a webcam},
-  author        = {Poh, Ming-Zher and McDuff, Daniel J and Picard, Rosalind W},
-  journal       = {IEEE Transactions on Biomedical Engineering},
-  year          = {2011},
-  volume        = {58},
-  pages         = {7--11}
-}
-
-@ARTICLE{poh2010non,
-  title         = {Non-contact, automated cardiac pulse measurements using video imaging and blind source separation},
-  author        = {Poh, Ming-Zher and McDuff, Daniel J and Picard, Rosalind W},
-  journal       = {Optics express},
-  year          = {2010},
-  volume        = {18},
-  pages         = {10762--10774},
-  number        = {10},
-  month         = {May},
-  publisher     = {Optical Society of America}
-}
-
-@article{verkruysse2008remote,
-  title         = {Remote plethysmographic imaging using ambient light},
-  author        = {Verkruysse, Wim and Svaasand, Lars O and Nelson, J Stuart},
-  journal       = {Optics express},
-  volume        = {16},
-  number        = {26},
-  pages         = {21434--21445},
-  year          = {2008},
-  publisher     = {Optical Society of America}
-}
-
-
-@article{wieringa2005contactless,
-  title         = {Contactless multiple wavelength photoplethysmographic imaging: a first step toward ``{SpO2} camera'' technology},
-  author        = {Wieringa, Fokko P and Mastik, Frits and Steen, A FW van der},
-  journal       = {Annals of biomedical engineering},
-  volume        = {33},
-  number        = {8},
-  pages         = {1034--1041},
-  year          = {2005},
-  publisher     = {Springer}
-}
-
-
-@MISC{wiki:bayerfilter,
-  title         = {Bayer filter},
-  author        = {Wikipedia},
-  year          = {2011},
-  url           = {http://en.wikipedia.org/wiki/Bayer_filter},
-  note          = {[Online; accessed 14-May-2017]}
-}
-
-@MANUAL{nonin9560oem,
-  title         = {{Onyx II Model 9560 Bluetooth Fingertip Oximeter OEM Specification and Technical Information}},
-  author        = {{Nonin Medical}},
-  organization  = {Nonin Medical},
-  number        = {6470-000-01},
-  year          = {2008}
-}
-
-
-@article{Mas_Fernandez_2003,
-  title         = {Video shot boundary detection based on color histogram},
-  author        = {Mas, Jordi and Fernandez, Gabriel},
-  journal       = {Notebook Papers TRECVID2003, Gaithersburg, Maryland, NIST},
-  year          = {2003}
-}
-
-
-@book{hartley2003multiple,
-  title         = {Multiple view geometry in computer vision},
-  author        = {Hartley, Richard and Zisserman, Andrew},
-  year          = {2003},
-  publisher     = {Cambridge university press}
-}
-
-@book{schmidt1997animal,
-  title         = {Animal physiology: adaptation and environment},
-  author        = {Schmidt-Nielsen, Knut},
-  year          = {1997},
-  publisher     = {Cambridge University Press}
-}
-
-@INPROCEEDINGS{4036907,
-  title         = {A Simple and Accurate Color Face Detection Algorithm in Complex Background},
-  author        = {Pai, Yu-Ting and Ruan, Shang-Jang and Shie, Mon-Chau and Liu, Yi-Chi},
-  booktitle     = {IEEE International Conference on Multimedia and Expo},
-  year          = {2006},
-  month         = {Jul},
-  pages         = {1545 -1548}
-}
-
-@article {Orbanz2008,
-  title         = {Nonparametric Bayesian Image Segmentation},
-  author        = {Orbanz, Peter and Buhmann, Joachim},
-  journal       = {International Journal of Computer Vision},
-  publisher     = {Springer Netherlands},
-  pages         = {25-45},
-  volume        = {77},
-  issue         = {1},
-  year          = {2008}
-}
-
-@misc{varjavand2002interactive,
-  title         = {The interactive oxyhemoglobin dissociation curve},
-  author        = {Varjavand, Nielufar and Kaye, Jonathan and Wang, Shaojie and Primiano, Frank},
-  year          = {2002}
-}
-
-
-@MISC{report:PCESC2005,
-  title         = {A Fast Skin Region Detector},
-  author        = {Chen, Phil and Grecos, Christos},
-  publisher     = {Department of EEE, Loughborough University},
-  year          = {2005}
-}
-
-@ARTICLE{HSU_05_2012,
-  title         = {Face Detection in Color Images},
-  author        = {Hsu, Rein-Lien and Abdel-Mottaleb, Mohamed and Jain, Anil K},
-  journal       = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-  year          = {2002},
-  volume        = {24},
-  pages         = {696--706},
-  number        = {5}
-}
-
-@article{collins2015relating,
-  title         = {Relating oxygen partial pressure, saturation and content: the haemoglobin--oxygen dissociation curve},
-  author        = {Collins, Julie-Ann and Rudenski, Aram and Gibson, John and Howard, Luke and O’Driscoll, Ronan},
-  journal       = {Breathe},
-  volume        = {11},
-  number        = {3},
-  pages         = {194},
-  year          = {2015},
-  publisher     = {European Respiratory Society}
-}
-
-@article{abdi2010principal,
-  title         = {Principal component analysis},
-  author        = {Abdi, Herv{\'e} and Williams, Lynne J},
-  journal       = {Wiley interdisciplinary reviews: computational statistics},
-  volume        = {2},
-  number        = {4},
-  pages         = {433--459},
-  year          = {2010},
-  publisher     = {Wiley Online Library}
-}
-
-@article{cote1988effect,
-  title         = {The effect of nail polish on pulse oximetry.},
-  author        = {Cot{\'e}, Charles J and Goldstein, E Andrew and Fuchsman, William H and Hoaglin, David C},
-  journal       = {Anesthesia \& Analgesia},
-  volume        = {67},
-  number        = {7},
-  pages         = {683--686},
-  year          = {1988},
-  publisher     = {International Anesthesia Research Society}
-}
-
-@article{aravindhan2000sulfhemoglobinemia,
-  title         = {Sulfhemoglobinemia presenting as pulse oximetry desaturation},
-  author        = {Aravindhan, Nadarajah and Chisholm, David George},
-  journal       = {The Journal of the American Society of Anesthesiologists},
-  volume        = {93},
-  number        = {3},
-  pages         = {883--884},
-  year          = {2000},
-  publisher     = {The American Society of Anesthesiologists}
-}
-
-@article{clayton1991pulse,
-  title         = {Pulse oximeter probes A comparison between finger, nose, ear and forehead probes under conditions of poor perfusion},
-  author        = {Clayton, DG and Webb, RK and Ralston, AC and Duthie, D and Runciman, WB},
-  journal       = {Anaesthesia},
-  volume        = {46},
-  number        = {4},
-  pages         = {260--265},
-  year          = {1991},
-  publisher     = {Wiley Online Library}
-}
-
-@article{clayton1991comparison,
-  title         = {A comparison of the performance of 20 pulse oximeters under conditions of poor perfusion},
-  author        = {Clayton, DG and Webb, RK and Ralston, AC and Duthie, D and Runciman, WB},
-  journal       = {Anaesthesia},
-  volume        = {46},
-  number        = {1},
-  pages         = {3--10},
-  year          = {1991},
-  publisher     = {Wiley Online Library}
-}
-
-
-@article{webb1991potential,
-  title         = {Potential errors in pulse oximetry},
-  author        = {Webb, RK and Ralston, AC and Runciman, WB},
-  journal       = {Anaesthesia},
-  volume        = {46},
-  number        = {3},
-  pages         = {207--212},
-  year          = {1991},
-  publisher     = {Wiley Online Library}
-}
-
-
-@INPROCEEDINGS{212885,
-  title         = {{CMOS video cameras}},
-  author        = {Wang, G. and Renshaw, D. and Denyer, P.B. and Lu, M.},
-  booktitle     = {Euro ASIC '91},
-  year          = {1991},
-  month         = {May},
-  pages         = {100 -103}
-}
-
-@ARTICLE{964165,
-  title         = {{An advanced video camera system with robust AF, AE, and AWB control}},
-  author        = {Lee, June-Sok and Jung, You-Young and Kim, Byung-Soo and Ko, Sung-Jea},
-  journal       = {IEEE Transactions on Consumer Electronics},
-  year          = {2001},
-  month         = {Aug},
-  volume        = {47},
-  number        = {3},
-  pages         = {694 -699}
-}
-
-@inproceedings{Raja:1998:TSP:520809.796140,
-  title         = {Tracking and Segmenting People in Varying Lighting Conditions Using Colour},
-  author        = {Raja, Yogesh and McKenna, Stephen J and Gong, Shaogang},
-  booktitle     = {Proceedings of the 3rd International IEEE Conference on Face \& Gesture Recognition},
-  year          = {1998}
-}
-
-
-@inproceedings{Chaichulee2017FG,
-  title         = {Multi-task Convolutional Neural Network for Patient Detection and Skin Segmentation in Continuous Non-contact Vital Sign Monitoring},
-  author        = {Chaichulee, Sitthichok and Villarroel, Mauricio and Jorge, Jo\~{a}o and Arteta, Carlos and Green, Gabrielle and McCormick, Kenny and Zisserman, Andrew and Tarassenko, Lionel},
-  booktitle     = {Proceedings of the 12th International IEEE Conference on Face \& Gesture Recognition},
-  year          = {2017}
-}
-
-@phdthesis{schmitz2011video,
-  title         = {Video camera based photoplethysmography using ambient light},
-  author        = {Schmitz, GLLH},
-  year          = {2011},
-  school        = {Technische Universiteit Eindhoven}
-}
-
-@inproceedings{mostafanezhad2009application,
-  title         = {{Application of empirical mode decomposition in removing fidgeting interference in Doppler radar life signs monitoring devices}},
-  author        = {Mostafanezhad, Isar and Boric-Lubecke, Olga and Lubecke, Victor and Mandic, Danilo P},
-  booktitle     = {Annual International Conference of the IEEE Engineering in Medicine and Biology Society},
-  pages         = {340--343},
-  year          = {2009}
-}
-
-
-@inproceedings{droitcour2001microwave,
-  title         = {{A microwave radio for Doppler radar sensing of vital signs}},
-  author        = {Droitcour, Amy and Lubecke, Victor and Lin, Jenshan and Boric-Lubecke, Olga},
-  booktitle     = {IEEE MTT-S International Microwave Symposium Digest},
+% Example article
+@article{example_pupillometry_2024,
+  title         = {Quantitative pupillometry as a biomarker for mild traumatic brain injury},
+  author        = {Author, First and Author, Second},
+  journal       = {Journal Name},
   volume        = {1},
-  pages         = {175--178},
-  year          = {2001}
+  number        = {1},
+  pages         = {1--10},
+  year          = {2024},
+  publisher     = {Publisher Name}
 }
 
-@phdthesis{droitcour2006non,
-  title         = {{Non-contact measurement of heart and respiration rates with a single-chip microwave Doppler radar}},
-  author        = {Droitcour, Amy},
-  year          = {2006},
-  school        = {Stanford University}
+
+% Example conference paper
+@inproceedings{example_smartphone_2023,
+  title         = {Smartphone-based pupillometry for concussion screening},
+  author        = {Author, First and Author, Second and Author, Third},
+  booktitle     = {Proceedings of Conference Name},
+  pages         = {100--105},
+  year          = {2023},
+  organization  = {IEEE}
 }
 
-@MISC{yu2011innovative,
-  title         = {An Innovative Non-contact Sensing Platform to Prevent Traffic Accident due to Driver Drowsiness},
-  author        = {Yu, Bill X},
-  year          = {2011},
-  organization  = {{The Ohio Transportation Consortium}}
+
+% Example book
+@book{example_tbi_handbook,
+  title         = {Handbook of Traumatic Brain Injury Assessment},
+  author        = {Editor, First and Editor, Second},
+  year          = {2022},
+  publisher     = {Academic Press},
+  edition       = {2nd}
 }
 
-@inproceedings{sharifahmadian2009adaptive,
-  title         = {{Adaptive signal processing algorithm for remote detection of heart rate (HR) using ultra-wideband waveforms based on principal component analysis}},
-  author        = {Sharifahmadian, Ershad and Ahmadian, Alireza},
-  booktitle     = {Annual International Conference of the IEEE Engineering in Medicine and Biology Society},
-  pages         = {5717--5720},
-  year          = {2009}
+
+% Example online resource
+@misc{example_web_resource,
+  title         = {Guide to mTBI Assessment},
+  author        = {Organization Name},
+  year          = {2024},
+  url           = {https://example.com},
+  note          = {[Online; accessed 30-Oct-2025]}
 }
 
-@article{thiel2009non,
-  title         = {{Non-contact detection of myocardium's mechanical activity by ultrawideband RF-radar and interpretation applying electrocardiography}},
-  author        = {Thiel, F and Kreiseler, D and Seifert, F},
-  journal       = {Review of Scientific Instruments},
-  volume        = {80},
-  pages         = {114302},
-  year          = {2009}
+
+% Example technical report
+@techreport{example_tech_report,
+  title         = {Development of Portable Concussion Assessment Devices},
+  author        = {Researcher, First},
+  institution   = {University Name},
+  year          = {2023},
+  type          = {Technical Report},
+  number        = {TR-2023-01}
 }
 
-@inproceedings{chi2009non,
-  title         = {{Non-contact low power EEG/ECG electrode for high density wearable biopotential sensor networks}},
-  author        = {Chi, Yu M and Deiss, Stephen R and Cauwenberghs, Gert},
-  booktitle     = {Sixth IEEE International Workshop on Wearable and Implantable Body Sensor Networks},
-  pages         = {246--250},
-  year          = {2009}
-}
+
+% Add your references below this line
+% ========================================
+
+
+
+% Common BibTeX entry types:
+%
+% @article         - Journal or magazine article
+% @book            - Published book
+% @inproceedings   - Conference paper
+% @phdthesis       - PhD thesis
+% @mastersthesis   - Master's thesis
+% @techreport      - Technical report
+% @misc            - Miscellaneous (websites, etc.)
+% @manual          - Technical manual
+% @patent          - Patent
+%
+% Common fields:
+% - title, author, year (required for most types)
+% - journal, volume, number, pages (for articles)
+% - booktitle, organization (for conference papers)
+% - publisher, edition (for books)
+% - institution (for technical reports and theses)
+% - url, note (for online resources)
