added EEM section

--- a/sample_dphil_thesis.tex
+++ b/sample_dphil_thesis.tex
@@ -44,6 +44,7 @@
 
 \include{chap_introduction}
 \include{chap_background}
+\include{chap_commercialisation}
 \include{chap_design}
 \include{chap_implementation}
 \include{chap_testing}
